--- a/app/globals.css
+++ b/app/globals.css
@@ -74,6 +74,7 @@
   }
   svg #heart {
     transform-origin: center;
+    animation: animateHeartOut 0.3s ease-in-out forwards;
   }
   svg #main-circ {
     transform-origin: 29.5px 29.5px;
@@ -82,7 +83,7 @@
   [data-liked="true"] > svg #heart {
     transform: scale(0.2);
     fill: #e2264d;
-    animation: animateHeart 0.3s linear forwards 0.25s;
+    animation: animateHeart 0.3s ease-out forwards 0.25s;
   }
   [data-liked="true"] > svg #main-circ {
     transition: all 2s;
@@ -263,6 +264,14 @@
     }
     40% {
       transform: scale(1.2);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes animateHeartOut {
+    0% {
+      transform: scale(1.4);
     }
     100% {
       transform: scale(1);
